tests/baselines/reference/typeSatisfaction.errors.txt
tests/cases/conformance/expressions/typeSatisfaction/typeSatisfaction.ts(12,20): error TS1360: Type '{ a: number; b: number; }' does not satisfy the expected type 'I1'.
  Object literal may only specify known properties, and 'b' does not exist in type 'I1'.
tests/cases/conformance/expressions/typeSatisfaction/typeSatisfaction.ts(13,26): error TS1360: Type '{}' does not satisfy the expected type 'I1'.
  Property 'a' is missing in type '{}' but required in type 'I1'.


==== tests/cases/conformance/expressions/typeSatisfaction/typeSatisfaction.ts (2 errors) ====
    interface I1 {
        a: number;
    }
    
    type T1 = {
        a: "a" | "b";
    }
    
    type T2 = (x: string) => void;
    
    const a1 = { a: 1 } satisfies I1; // Ok
    const a2 = { a: 1, b: 1 } satisfies I1; // Error
                       ~~~~
!!! error TS1360: Type '{ a: number; b: number; }' does not satisfy the expected type 'I1'.
!!! error TS1360:   Object literal may only specify known properties, and 'b' does not exist in type 'I1'.
    const a3 = { } satisfies I1; // Error
                             ~~
!!! error TS1360: Type '{}' does not satisfy the expected type 'I1'.
!!! error TS1360:   Property 'a' is missing in type '{}' but required in type 'I1'.
!!! related TS2728 tests/cases/conformance/expressions/typeSatisfaction/typeSatisfaction.ts:2:5: 'a' is declared here.
    
    const a4: T1 = { a: "a" } satisfies T1; // Ok
    const a5 = (m => m.substring(0)) satisfies T2; // Ok
    